# DRF-Shop-API

./: api.http  db.sqlite3  main.py  models.dot  pyproject.toml  schema.yml
api/: admin.py  filters.py  models.py  serializers.py  signals.py  tasks.py  tests.py  throttles.py  urls.py  views.py
api/management/commands/: populate_db.py
api/managements/commands/: populate_db.py
api/migrations/: 0001_initial.py  0002_alter_orderitem_order.py  0003_remove_order_products.py  0004_rename_product_orderitem_chosen_product_and_more.py  0005_rename_all_product_order_products_and_more.py  0006_alter_order_status_alter_product_name.py
shop/: celery.py  settings.py  urls.py
shop/shop/: settings.py
