[project]
name = "drf-shop-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.10.0",
    "django>=5.2.7",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-silk>=5.4.3",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.28.0",
    "pillow>=12.0.0",
    "sqlparse>=0.5.3",
    "tzdata>=2025.2",
]
